--- a/unit02-pytorch-tensors/exercises/2_perceptron-matmul/exercise_2_perceptron-matmul.ipynb
+++ b/unit02-pytorch-tensors/exercises/2_perceptron-matmul/exercise_2_perceptron-matmul.ipynb
@@ -20,10 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "63d7e8f9-191b-4d24-80a9-e5b8b278aee1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T18:42:00.354362Z",
+     "start_time": "2025-02-11T18:41:49.153346Z"
+    }
+   },
    "source": [
     "import torch\n",
     "\n",
@@ -41,7 +44,9 @@
     "            prediction = torch.tensor(0.0)\n",
     "\n",
     "        return prediction"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -55,17 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
    "id": "b1a297f4-74a4-4207-a845-cc8037a9b075",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T18:42:07.260072Z",
+     "start_time": "2025-02-11T18:42:07.236866Z"
+    }
+   },
    "source": [
     "X_data = torch.tensor([\n",
     "    [-1.0, -2.0],\n",
     "    [-3.0, 4.5],\n",
     "    [5.0, 6.0]\n",
     "])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -77,9 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "8d92b815-1c6f-4cbb-a60e-ab869b2612a5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T18:42:10.596056Z",
+     "start_time": "2025-02-11T18:42:10.559413Z"
+    }
+   },
+   "source": [
+    "ppn = Perceptron()\n",
+    "\n",
+    "for x in X_data:\n",
+    "    print(ppn.forward(x))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -91,12 +111,7 @@
      ]
     }
    ],
-   "source": [
-    "ppn = Perceptron()\n",
-    "\n",
-    "for x in X_data:\n",
-    "    print(ppn.forward(x))"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -115,10 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "cdb04e07-8772-410b-ba42-c390bbcd091b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T18:42:13.532647Z",
+     "start_time": "2025-02-11T18:42:13.527335Z"
+    }
+   },
    "source": [
     "class Perceptron:\n",
     "    def __init__(self):\n",
@@ -126,8 +144,18 @@
     "        self.bias = torch.tensor(-3.0)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        ### YOUR CODE ###"
-   ]
+    "        weighted_sum_z = torch.matmul(x, self.weights) + self.bias\n",
+    "\n",
+    "        prediction = torch.where(\n",
+    "            weighted_sum_z > 0.,\n",
+    "            torch.tensor(1.),\n",
+    "            torch.tensor(0.)\n",
+    "        )\n",
+    "\n",
+    "        return prediction"
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -139,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "1c479cca-12a9-4655-9c30-cbbe9af2f9ff",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T18:42:15.845777Z",
+     "start_time": "2025-02-11T18:42:15.825223Z"
+    }
+   },
+   "source": [
+    "ppn = Perceptron()\n",
+    "ppn.forward(X_data)"
+   ],
    "outputs": [
     {
      "data": {
@@ -149,15 +185,12 @@
        "tensor([0., 0., 1.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "ppn = Perceptron()\n",
-    "ppn.forward(X_data)"
-   ]
+   "execution_count": 5
   }
  ],
  "metadata": {
