--- a/unit03-pytorch-training/exercises/2_standardization/exercise_2_standardization.ipynb
+++ b/unit03-pytorch-training/exercises/2_standardization/exercise_2_standardization.ipynb
@@ -95,35 +95,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ab70cfad-f8bb-4076-b22e-dffa4f8a48fa",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:07:53.769161Z",
+     "start_time": "2025-02-18T01:07:53.380400Z"
+    }
+   },
    "source": [
     "import pandas as pd"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "bb8965ae-5222-4541-a7c6-7a9aaa4d1033",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:07:54.623737Z",
+     "start_time": "2025-02-18T01:07:54.594332Z"
+    }
+   },
    "source": [
     "df = pd.read_csv(\"data_banknote_authentication.txt\", header=None)\n",
     "df.head()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "         0       1       2        3  4\n",
+       "0  3.62160  8.6661 -2.8073 -0.44699  0\n",
+       "1  4.54590  8.1674 -2.4586 -1.46210  0\n",
+       "2  3.86600 -2.6383  1.9242  0.10645  0\n",
+       "3  3.45660  9.5228 -4.0112 -3.59440  0\n",
+       "4  0.32924 -4.4552  4.5718 -0.98880  0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.62160</td>\n",
+       "      <td>8.6661</td>\n",
+       "      <td>-2.8073</td>\n",
+       "      <td>-0.44699</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.54590</td>\n",
+       "      <td>8.1674</td>\n",
+       "      <td>-2.4586</td>\n",
+       "      <td>-1.46210</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.86600</td>\n",
+       "      <td>-2.6383</td>\n",
+       "      <td>1.9242</td>\n",
+       "      <td>0.10645</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.45660</td>\n",
+       "      <td>9.5228</td>\n",
+       "      <td>-4.0112</td>\n",
+       "      <td>-3.59440</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.32924</td>\n",
+       "      <td>-4.4552</td>\n",
+       "      <td>4.5718</td>\n",
+       "      <td>-0.98880</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "860304f1-1b8c-4993-b547-20e2dcceb03b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:07:56.136459Z",
+     "start_time": "2025-02-18T01:07:56.131292Z"
+    }
+   },
    "source": [
     "X_features = df[[0, 1, 2, 3]].values\n",
     "y_labels = df[4].values"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -135,13 +237,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6f342b22-0fde-436a-a121-00e9ce627512",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:07:58.365249Z",
+     "start_time": "2025-02-18T01:07:58.360053Z"
+    }
+   },
    "source": [
     "X_features.shape"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1372, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -153,15 +271,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1e8247a8-101d-4195-84d3-12b6593c0099",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:07:59.821191Z",
+     "start_time": "2025-02-18T01:07:59.816181Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "\n",
     "np.bincount(y_labels)"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([762, 610])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -181,10 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "fa4ba92f-f294-4572-8aa2-d2fa50788a9d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:03.610872Z",
+     "start_time": "2025-02-18T01:08:01.881465Z"
+    }
+   },
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
@@ -202,7 +339,9 @@
     "\n",
     "    def __len__(self):\n",
     "        return self.labels.shape[0]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -214,25 +353,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f8bbd768-c15c-40f5-8500-83fad5bb1722",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:03.847806Z",
+     "start_time": "2025-02-18T01:08:03.842873Z"
+    }
+   },
    "source": [
     "train_size = int(X_features.shape[0]*0.80)\n",
     "train_size"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1097"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0b09d3d5-f4f7-47df-8160-8d883c0c5e19",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:05.323664Z",
+     "start_time": "2025-02-18T01:08:05.318244Z"
+    }
+   },
    "source": [
     "val_size = X_features.shape[0] - train_size\n",
     "val_size"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "275"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -244,10 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "22a0e19a-de40-4309-b197-368a781a5633",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:06.767903Z",
+     "start_time": "2025-02-18T01:08:06.758905Z"
+    }
+   },
    "source": [
     "import torch\n",
     "\n",
@@ -267,7 +441,9 @@
     "    batch_size=10,\n",
     "    shuffle=False,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -289,10 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "b6913a35-3222-463b-8c6f-a52a852ec3f1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:09.523164Z",
+     "start_time": "2025-02-18T01:08:09.483687Z"
+    }
+   },
    "source": [
     "train_mean = torch.zeros(X_features.shape[1])\n",
     "\n",
@@ -306,7 +485,9 @@
     "    train_std += ((x - train_mean)**2).sum(dim=0)\n",
     "\n",
     "train_std = torch.sqrt(train_std / (len(train_set)-1))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -331,10 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "21c5bdab-23c2-47b5-b6bb-65b63ab636d8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:12.074127Z",
+     "start_time": "2025-02-18T01:08:12.046991Z"
+    }
+   },
    "source": [
     "all_x = []\n",
     "for x, y in train_loader:\n",
@@ -342,7 +526,9 @@
     "    \n",
     "train_std = torch.concat(all_x).std(dim=0)\n",
     "train_mean = torch.concat(all_x).mean(dim=0)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -365,14 +551,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "200d3b72-0ee6-492a-8ef1-72fb856e44b3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:54.549685Z",
+     "start_time": "2025-02-18T01:08:54.545809Z"
+    }
+   },
    "source": [
-    "def standardize(df, ...): # YOUR CODE\n",
-    "    # YOUR CODE"
-   ]
+    "def standardize(df, train_mem, train_std):\n",
+    "    return (df - train_mem) / train_std"
+   ],
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -392,10 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3da86d9a-7cd5-467c-bf65-3388fe272bd5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:08:56.349988Z",
+     "start_time": "2025-02-18T01:08:56.346073Z"
+    }
+   },
    "source": [
     "import torch\n",
     "\n",
@@ -409,7 +603,9 @@
     "        logits = self.linear(x)\n",
     "        probas = torch.sigmoid(logits)\n",
     "        return probas"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -431,10 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "79c712f6-4e2a-43e9-8563-215f88beb4a8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:10:53.805834Z",
+     "start_time": "2025-02-18T01:10:53.702669Z"
+    }
+   },
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
@@ -464,7 +663,28 @@
     "            print(f'Epoch: {epoch+1:03d}/{num_epochs:03d}'\n",
     "                   f' | Batch {batch_idx:03d}/{len(train_loader):03d}'\n",
     "                   f' | Loss: {loss:.2f}')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 001/002 | Batch 000/110 | Loss: 0.93\n",
+      "Epoch: 001/002 | Batch 020/110 | Loss: 0.08\n",
+      "Epoch: 001/002 | Batch 040/110 | Loss: 0.23\n",
+      "Epoch: 001/002 | Batch 060/110 | Loss: 0.05\n",
+      "Epoch: 001/002 | Batch 080/110 | Loss: 0.03\n",
+      "Epoch: 001/002 | Batch 100/110 | Loss: 0.05\n",
+      "Epoch: 002/002 | Batch 000/110 | Loss: 0.13\n",
+      "Epoch: 002/002 | Batch 020/110 | Loss: 0.02\n",
+      "Epoch: 002/002 | Batch 040/110 | Loss: 0.21\n",
+      "Epoch: 002/002 | Batch 060/110 | Loss: 0.08\n",
+      "Epoch: 002/002 | Batch 080/110 | Loss: 0.07\n",
+      "Epoch: 002/002 | Batch 100/110 | Loss: 0.07\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -486,10 +706,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4b6473aa-98ac-4ffe-84b5-cb5a2d511018",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:13:03.251266Z",
+     "start_time": "2025-02-18T01:13:03.246259Z"
+    }
+   },
    "source": [
     "def compute_accuracy(model, dataloader):\n",
     "\n",
@@ -511,20 +734,34 @@
     "        total_examples += len(compare)\n",
     "\n",
     "    return correct / total_examples"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "2c4e70f5-0fbd-4782-a7b0-75c687c5b6d9",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:23:35.590051Z",
+     "start_time": "2025-02-18T01:23:35.558796Z"
+    }
    },
-   "outputs": [],
    "source": [
     "train_acc = compute_accuracy(model, train_loader)\n",
     "print(f\"Accuracy: {train_acc*100:.2f}%\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 83.96%\n"
+     ]
+    }
+   ],
+   "execution_count": 37
   },
   {
    "cell_type": "markdown",
@@ -536,16 +773,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7edead56-db64-4667-8007-937ab1974ac0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:23:30.497696Z",
+     "start_time": "2025-02-18T01:23:30.485065Z"
+    }
+   },
    "source": [
-    "## SOLUTION\n",
     "\n",
-    "val_acc = # YOUR CODE\n",
+    "val_acc = compute_accuracy(model, val_loader)\n",
     "print(f\"Accuracy: {val_acc*100:.2f}%\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 80.36%\n"
+     ]
+    }
+   ],
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -554,6 +803,89 @@
    "source": [
     "<font color='red'>Now, add the standardization to the `compute_accuracy` function above and recompute the training and validation accuracy. What do you observe?</font>"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:38:03.806448Z",
+     "start_time": "2025-02-18T01:38:03.801541Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def compute_accuracy(model, dataloader):\n",
+    "\n",
+    "    model = model.eval()\n",
+    "\n",
+    "    correct = 0.0\n",
+    "    total_examples = 0\n",
+    "\n",
+    "    for idx, (features, class_labels) in enumerate(dataloader):\n",
+    "\n",
+    "        features = standardize(features, train_mean, train_std) ## SOLUTION\n",
+    "        with torch.no_grad():\n",
+    "            probas = model(features)\n",
+    "\n",
+    "        pred = torch.where(probas > 0.5, 1, 0)\n",
+    "        lab = class_labels.view(pred.shape).to(pred.dtype)\n",
+    "\n",
+    "        compare = lab == pred\n",
+    "        correct += torch.sum(compare)\n",
+    "        total_examples += len(compare)\n",
+    "\n",
+    "    return correct / total_examples"
+   ],
+   "id": "e80ea5d8e77ac7eb",
+   "outputs": [],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:38:06.029284Z",
+     "start_time": "2025-02-18T01:38:05.999126Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "train_acc = compute_accuracy(model, train_loader)\n",
+    "print(f\"Accuracy: {train_acc*100:.2f}%\")"
+   ],
+   "id": "a5a72ddbec373059",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 98.09%\n"
+     ]
+    }
+   ],
+   "execution_count": 49
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-18T01:38:07.154379Z",
+     "start_time": "2025-02-18T01:38:07.140945Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "val_acc = compute_accuracy(model, val_loader)\n",
+    "print(f\"Accuracy: {val_acc*100:.2f}%\")"
+   ],
+   "id": "3b77c98f2aa2f7fc",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 98.18%\n"
+     ]
+    }
+   ],
+   "execution_count": 50
   }
  ],
  "metadata": {
